--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,34 @@
 .header {
 	max-width: 1366px
-	height: 1540px;
+	height: 90px;
+	border-radius: 0px;
+	display: flex;
+}
+.header-block {
+	max-width: 1325px
+	height:31px;
+	display: flex;
+	margin-left: 25px
+	margin: 20px;
+}
+.logo {
+	max-width: 50px;
+	height: 20px;
+}
+.navigation {
+	max-width: 535px;
+	height: 16px;
+	display: flex;
+}
+.nav-ul {
+	display: flex;
+}
+.nav-list {
+	padding: 20px;
+}
+.media-block {
+	max-width: 225px
+	height: 18px;
+	display: flex;
+	margin-left: 350px;
 }
